adding divide feature.
